--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,15 @@ body,
 .leaflet-top {
   z-index: 0 !important;
 }
+
+.rdrCalendarWrapper {
+  width: 100% !important;
+}
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
+}
